--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <title>達成率</title>
 </head>
 <body>
-<label>PERFECT:<input type="number" id="per" min="0"></input></label><br>
-<label>GREAT&nbsp;&nbsp;&nbsp;:<input type="number" id="gre" min="0"></input></label><br>
-<label>GOOD&nbsp;&nbsp;&nbsp;&nbsp;:<input type="number" id="goo" min="0"></input></label><br>
-<label>BAD&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:<input type="number" id="bad" min="0"></input></label><br>
-<label>MISS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:<input type="number" id="mis" min="0"></input></label><br>
+<label>PERFECT:<input type="number" id="per" min="0" step="1"></input></label><br>
+<label>GREAT&nbsp;&nbsp;&nbsp;:<input type="number" id="gre" min="0" step="1"></input></label><br>
+<label>GOOD&nbsp;&nbsp;&nbsp;&nbsp;:<input type="number" id="goo" min="0" step="1"></input></label><br>
+<label>BAD&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:<input type="number" id="bad" min="0" step="1"></input></label><br>
+<label>MISS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:<input type="number" id="mis" min="0" step="1"></input></label><br>
 <button onclick="calc()">計算</button><br>
 達成率：<a id="percent">0.0000</a>%<br>
 ランク：<a id="rank"></a>
