--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <button onclick="calc()">計算</button><br>
 達成率：<a id="percent">0.0000</a>%<br>
 ランク：<a id="rank"></a>
+オプションFCで100%にする<input type="checkbox" id="fc_percent">
 </body>
 <script type="text/javascript">
 function calc(){
@@ -20,7 +21,11 @@ var goo = parseInt(document.getElementById('goo').value,10);
 var bad = parseInt(document.getElementById('bad').value,10);
 var mis = parseInt(document.getElementById('mis').value,10);
 var com = per + gre + goo + bad + mis;
+if (document.fc_percent.checked) {
+var percent = (100 / com * ( per + gre + 0.5 * goo + 0.1 * bad)).toFixed(4);
+}else{
 var percent = (100 / com * ( per + 0.7 * gre + 0.5 * goo + 0.1 * bad)).toFixed(4);
+}
 if(percent == 'NaN'){
 alert("すべての枠に数値を入れてください");
 }else{
