--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <label>MISS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:<input type="number" id="mis" min="0" step="1"></input></label><br>
 <button onclick="calc()">計算</button><br>
 達成率：<a id="percent">0.0000</a>%<br>
-ランク：<a id="rank"></a>
+ランク：<a id="rank"></a><br>
 オプションFCで100%にする<input type="checkbox" id="fc_percent">
 </body>
 <script type="text/javascript">
