--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <button onclick="calc()">計算</button><br>
 達成率：<a id="percent">0.0000</a>%<br>
 ランク：<a id="rank"></a><br>
-オプションFCで100%にする<input type="checkbox" id="fc_percent">
+FCで100%にする<input type="checkbox" id="fc_percent" style="transform: scale(1.5)">
 </body>
 <script type="text/javascript">
 function calc(){
