--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title>達成率</title>
 <style>
-input:invalid {border: solid 3px red;outline: 0;}
+input:invalid {border: solid 3px red;outline: 0}
+button {margin:5px;padding: 5px 10px 5px 10px}
 </style>
 </head>
 <body>
-<label>PERFECT:<input type="number" id="per" min="0" step="1"></input></label><br>
-<label>GREAT&nbsp;&nbsp;&nbsp;:<input type="number" id="gre" min="0" step="1"></input></label><br>
-<label>GOOD&nbsp;&nbsp;&nbsp;&nbsp;:<input type="number" id="goo" min="0" step="1"></input></label><br>
-<label>BAD&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:<input type="number" id="bad" min="0" step="1"></input></label><br>
-<label>MISS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:<input type="number" id="mis" min="0" step="1"></input></label><br>
+<table style="border:none;">
+<tr><td>PERFECT</td><td>:<input type="number" id="per" min="0" step="1"></td></tr>
+<tr><td>GREAT</td><td>:<input type="number" id="gre" min="0" step="1"></td></tr>
+<tr><td>GOOD</td><td>:<input type="number" id="goo" min="0" step="1"></td></tr>
+<tr><td>BAD</td><td>:<input type="number" id="bad" min="0" step="1"></td></tr>
+<tr><td>MISS</td><td>:<input type="number" id="mis" min="0" step="1"></td></tr>
+</table>
 <button onclick="calc()">計算</button><br>
 達成率：<a id="percent">0.0000</a>%<br>
 ランク：<a id="rank"></a><br>
-FCで100%にする<input type="checkbox" id="fc_percent" style="transform: scale(1.5)">
+<label>FCで100%にする<input type="checkbox" id="fc_check" style="transform: scale(1.5)"></label>
 </body>
 <script type="text/javascript">
 function calc(){
@@ -24,13 +28,11 @@ var goo = parseInt(document.getElementById('goo').value,10);
 var bad = parseInt(document.getElementById('bad').value,10);
 var mis = parseInt(document.getElementById('mis').value,10);
 var com = per + gre + goo + bad + mis;
-//var fc_checked = document.getElementsById('fc_percent').checked;
-var percent = 0;
-//if(fc_checked != true){
-//percent = (100 / com * ( per + gre + 0.5 * goo + 0.1 * bad)).toFixed(4);
-//}else{
-percent = (100 / com * ( per + 0.7 * gre + 0.5 * goo + 0.1 * bad)).toFixed(4);
-//}
+if(document.getElementById("fc_check").checked){
+var percent = (100 / com * ( per + gre + 0.5 * goo + 0.1 * bad)).toFixed(4);
+}else{
+var percent = (100 / com * ( per + 0.7 * gre + 0.5 * goo + 0.1 * bad)).toFixed(4);
+}
 if(percent == 'NaN'){
 alert("すべての枠に数値を入れてください");
 }else{
@@ -63,8 +65,6 @@ document.getElementById('rank').textContent = 'B';
 document.getElementById('rank').textContent = 'C';
 }else{
 document.getElementById('rank').textContent = 'D';
-}
-}
-}
+}}}
 </script>
 </html>
