--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
 <title>達成率</title>
 <style>
 input:invalid {border: solid 3px red;outline: 0}
-button {margin:5px;padding: 5px 10px 5px 10px}
+button {
+  padding:5px 10px 5px 10px;
+  margin: 3px 10px 5px 10px;
+  text-decoration: none;
+  background: #eee;
+  color: #000;
+  border-radius: 3px;
+}
+.checkbox{
+  transform: scale(1.5);
+}
 </style>
 </head>
 <body>
@@ -18,7 +28,11 @@ button {margin:5px;padding: 5px 10px 5px 10px}
 <button onclick="calc()">計算</button><br>
 達成率：<a id="percent">0.0000</a>%<br>
 ランク：<a id="rank"></a><br>
-<label>FCで100%にする<input type="checkbox" id="fc_check" style="transform: scale(1.5)"></label>
+<table style="border:none;margin-top:10px;">
+<tr><th>オプション</th></tr>
+<tr><td>有効桁数(1~10)</td><td>:<input type="number" id="dig" min="0" max="10" step="1" value="4"></td></tr>
+<tr><td>FC=100%にする</td><td>:<input type="checkbox" id="fc_check" class="checkbox"></td></tr>
+</table>
 </body>
 <script type="text/javascript">
 function calc(){
@@ -27,14 +41,16 @@ var gre = parseInt(document.getElementById('gre').value,10);
 var goo = parseInt(document.getElementById('goo').value,10);
 var bad = parseInt(document.getElementById('bad').value,10);
 var mis = parseInt(document.getElementById('mis').value,10);
+var dig = parseInt(document.getElementById('dig').value,10);
+if(1<=dig&&10>=dig){
 var com = per + gre + goo + bad + mis;
 if(document.getElementById("fc_check").checked){
-var percent = (100 / com * ( per + gre + 0.5 * goo + 0.1 * bad)).toFixed(4);
+var percent = (100 / com * ( per + gre + 0.5 * goo + 0.1 * bad)).toFixed(dig);
 }else{
-var percent = (100 / com * ( per + 0.7 * gre + 0.5 * goo + 0.1 * bad)).toFixed(4);
+var percent = (100 / com * ( per + 0.7 * gre + 0.5 * goo + 0.1 * bad)).toFixed(dig);
 }
 if(percent == 'NaN'){
-alert("すべての枠に数値を入れてください");
+alert("すべての枠に数値を入力してください");
 }else{
 document.getElementById('percent').textContent = percent;
 if(percent>99.5000){
@@ -65,6 +81,11 @@ document.getElementById('rank').textContent = 'B';
 document.getElementById('rank').textContent = 'C';
 }else{
 document.getElementById('rank').textContent = 'D';
-}}}
+}
+}
+}else{
+alert("有効数字が規定外です");
+}
+}
 </script>
 </html>
